--- a/android-room-with-a-view-kotlin/app/gradle/wrapper/gradle-wrapper.properties
+++ b/android-room-with-a-view-kotlin/app/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Sep 25 10:49:56 BST 2018
+#Mon Dec 21 14:13:00 CET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
