--- a/android-room-with-a-view-kotlin/build.gradle
+++ b/android-room-with-a-view-kotlin/build.gradle
@@ -1,31 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext {
-        // Versions for all the dependencies we plan to use. It's particularly useful for kotlin and
-        // navigation where the versions of the plugin needs to be the same as the version of the
-        // library defined in the app Gradle file
-
-        version_android_gradle_plugin = '4.0.1'
-        version_core = "1.3.1"
-        version_constraint_layout = "1.1.3"
-        version_glide = "4.8.0"
-        version_kotlin = "1.3.72"
-        version_lifecycle = "2.2.0"
-        version_moshi = "1.8.0"
-        version_navigation = "1.0.0"
-        version_retrofit = "2.9.0"
-        version_recyclerview = "1.0.0"
-    }
-
+    ext.kotlin_version = "1.4.20"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$version_android_gradle_plugin"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
@@ -38,4 +23,20 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+// add the version numbers to the end of the file, as given in the code below.
+ext {
+    activityVersion = '1.1.0'
+    appCompatVersion = '1.2.0'
+    constraintLayoutVersion = '2.0.2'
+    coreTestingVersion = '2.1.0'
+    coroutines = '1.3.9'
+    lifecycleVersion = '2.2.0'
+    materialVersion = '1.2.1'
+    roomVersion = '2.2.5'
+    // testing
+    junitVersion = '4.13.1'
+    espressoVersion = '3.1.0'
+    androidxJunitVersion = '1.1.2'
 }
